--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "dependencies/csound"]
 	path = dependencies/csound
 	url = https://github.com/csound/csound.git
+[submodule "dependencies/libsndfile"]
+	path = dependencies/libsndfile
+	url = https://github.com/erikd/libsndfile.git
+[submodule "dependencies/eigen"]
+	path = dependencies/eigen
+	url = https://github.com/RLovelett/eigen.git
