--- a/CsoundHtml5/CMakeLists.txt
+++ b/CsoundHtml5/CMakeLists.txt
@@ -3,5 +3,5 @@ include(ExternalProject)
 message(STATUS "Building CsoundHtml5...")
 ExternalProject_Add(CsoundHtml5
     SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/CsoundHtml5"
-    CONFIGURE_COMMAND "qmake"
-    BUILD_COMMAND "${MAKE}")
+    CONFIGURE_COMMAND "${~/Qt/5.10.0/gcc_64/bin/qmake} -DQMAKESPEC ${QMAKESPEC}"
+    BUILD_COMMAND "make")
