Updated finding and using FLTK (#2).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,59 +11,88 @@ message("But if there ARE configuration variables, set them here.")
 
 project(csound-extended)
 
+# These are the real targets: the packages.
+
+set (CPACK_GENERATOR TGZ; DEB)
+set (CPACK_DEBIAN_PACKAGE_ARCHITECTURE "`dpkg --print-architecture`")
+set (CPACK_DEBIAN_PACKAGE_MAINTAINER "csound-devel@listserv.heanet.ie")
+set (CPACK_DEBIAN_PACKAGE_DESCRIPTION "Csound is a sound and music processing language.")
+
+# Top-level CMake configuration.
+
 include(ExternalProject)
+
+set (CMAKE_CXX_STANDARD 11)
 set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/local-linux")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/dependencies/csound/cmake/Modules")
 message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
 set(CMAKE_BUILD_TYPE "RelWithDebInfo")
 set(ALLOW_DUPLICATE_CUSTOM_TARGETS "Yes")
-
 set(USE_DOUBLE "Yes")
-set(BUILD_CSOUND_VST "On")
-set(BUILD_LINEAR_ALGEBRA_OPCODES "On")
-set(QMAKE "/home/mkg/Qt/5.10.0/gcc_64/bin/qmake")
+configure_file(${CMAKE_SOURCE_DIR}/dependencies/csound/include/float-version.h.in ${CMAKE_CURRENT_BINARY_DIR}/float-version.h)
 set(QT_INSTALL_PREFIX "~/Qt/5.10.0/gcc_64")
+set(QMAKE "/home/mkg/Qt/5.10.0/gcc_64/bin/qmake")
 set(CSOUND_INCLUDE_PATH "${CMAKE_SOURCE_DIR}/dependencies/csound/include")
 message(STATUS "CSOUND_INCLUDE_PATH: ${CSOUND_INCLUDE_PATH}")
 set(VSTSDK2X_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/dependencies/VST_SDK/VST2_SDK")
 message(STATUS "VSTSDK2X_INCLUDE_DIR: ${VSTSDK2X_INCLUDE_DIR}")
 set(BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})
-#if(USE_DOUBLE)
-#    set(BUILD_PLUGINS_DIR ${BUILD_DIR}/plugins64)
-#else()
-#    set(BUILD_PLUGINS_DIR ${BUILD_DIR}/plugins)
-#endif()
 set(BUILD_PLUGINS_DIR ${BUILD_DIR})
 set(BUILD_BIN_DIR ${BUILD_DIR})
 set(BUILD_LIB_DIR ${BUILD_DIR})
-
 #if(APPLE AND NOT ${CMAKE_GENERATOR} STREQUAL "Xcode")
 #    set(BUILD_PLUGINS_DIR ${BUILD_DIR}/${CSOUNDLIB}.framework/Versions/${APIVERSION}/Resources/Opcodes)
 #endif()
-
-message(STATUS "BUILD_BIN_DIR set to ${BUILD_BIN_DIR}.")
-message(STATUS "BUILD_LIB_DIR set to ${BUILD_LIB_DIR}.")
-message(STATUS "BUILD_PLUGINS_DIR set to ${BUILD_PLUGINS_DIR}.")
-
-option(USE_LIB64 "Set to on to set installation directory for libraries to lib64" ON)
+set(EXECUTABLE_INSTALL_DIR "bin")
+option(USE_LIB64 "Set to on to set installation directory for libraries to lib64" OFF)
 if(USE_LIB64)
     set(LIBRARY_INSTALL_DIR "lib64")
     add_definitions("-DLIB64")
 else()
     set(LIBRARY_INSTALL_DIR "lib")
 endif()
+message(STATUS "LIBRARY_INSTALL_DIR: {LIBRARY_INSTALL_DIR}")
+message(STATUS "BUILD_BIN_DIR: ${BUILD_BIN_DIR}")
+message(STATUS "BUILD_LIB_DIR: ${BUILD_LIB_DIR}")
+message(STATUS "BUILD_PLUGINS_DIR: ${BUILD_PLUGINS_DIR}.")
 set(PLUGIN_INSTALL_DIR "${LIBRARY_INSTALL_DIR}/csound/plugins64-${APIVERSION}")
 message(STATUS "LIBRARY INSTALL DIR: ${LIBRARY_INSTALL_DIR}")
 message(STATUS "PLUGIN_INSTALL_DIR: ${PLUGIN_INSTALL_DIR}")
 
+# Required targets.
+
+option(BUILD_BUCHLA_OPCODES "Build the Buchla filter opcode" ON)
+option(BUILD_CHUA_OPCODES "Build the chua opcodes" ON)
+option(BUILD_DSSI_OPCODES "Build the DSSI opcodes" ON)
+option(BUILD_CSOUND_VST "Build Csound as a VST plugin" ON)
+option(BUILD_EXCITER_OPCODES "Build the exciter opcode" ON)
+option(BUILD_FAUST_OPCODES "Build the Faust opcodes" ON)
+option(BUILD_FLUID_OPCODES "Build the fluidsynth opcodes" ON)
+option(BUILD_IMAGE_OPCODES "Build the image opcodes" ON)
+option(BUILD_JACK_OPCODES "Build the Jack related opcodes" ON)
+option(BUILD_LUA_OPCODES "Build the Lua opcodes" ON)
+option(BUILD_OSC_OPCODES "Build the OSC Opcodes" ON)
+option(BUILD_P5GLOVE_OPCODES "Build the P5Glove opcodes" ON)
+option(BUILD_PADSYNTH_OPCODES "Build the Padsynth opcode" ON)
+option(BUILD_PLATEREV_OPCODES "Build the platerev opcode" ON)
+option(BUILD_PYTHON_OPCODES "Build the Python opcodes" ON)
+option(BUILD_SCANSYN_OPCODES "Build the scansyn opcodes" ON)
+option(BUILD_SELECT_OPCODE "Build the select opcode" ON)
+option(BUILD_SERIAL_OPCODES "Build the serial opcode" ON)
+option(BUILD_STACK_OPCODES "Build the stack opcodes" ON)
+option(BUILD_WIIMOTE_OPCODES "Build the Wiimote opcodes" ON)
+option(BUILD_VST4CS_OPCODES "Build the vst4cs opcodes" ON)
+
 # All dependencies are to be located from here. 
-# Local TARGETS are not really PACKAGES!
+# Local TARGETS are not PACKAGES!
 # Locally installed packages must be searched locally first!
 # Locally built packages must be searched locally first!
 
-find_package(FLTK CONFIG REQUIRED)
 # find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+find_package(FLTK REQUIRED NO_MODULE)
+include(${FLTK_USE_FILE})
+find_package(FAUST)
 # find_package(fluidsynth)
 find_package(FAUST)
 find_package(Gettext)
@@ -72,7 +101,7 @@ find_package(Java)
 find_package(JNI)
 # find_package(LIBLO)
 find_package(LLVM)
-# find_package(luajit)
+find_package(LUAJIT HINTS ${CMAKE_SOURCE_DIR}/dependencies/luajit-2.0})
 find_package(PORTSMF)
 # find_package(portaudio2)
 find_package(PNG)
