--- a/CsoundVst/CMakeLists.txt
+++ b/CsoundVst/CMakeLists.txt
@@ -1,17 +1,19 @@
 # Build CsoundVST
 
 include(CheckIncludeFiles)
+configure_file(${CMAKE_SOURCE_DIR}/dependencies/csound/include/float-version.h.in ${CMAKE_CURRENT_BINARY_DIR}/float-version.h)
 
-option(BUILD_CSOUND_VST "Build CsoundVST plugin (needs C++ interface, FLTK, VST SDK)" OFF)
+option(BUILD_CSOUND_VST "Build CsoundVST plugin (needs C++ interface, FLTK, VST SDK)" ON)
 IF(APPLE)
 find_library(FLTK libfltk)
 ENDIF(APPLE)
 
-check_deps(BUILD_CSOUND_VST BUILD_CXX_INTERFACE FLTK_FOUND LIBSNDFILE_LIBRARY EIGEN3_INCLUDE_PATH VSTSDK2X_FOUND)
+check_deps(BUILD_CSOUND_VST BUILD_CXX_INTERFACE FLTK_FOUND LIBSNDFILE_LIBRARY EIGEN3_INCLUDE_PATH VSTSDK2X_INCLUDE_DIR)
 message(STATUS "BUILD_CSOUND_VST: ${BUILD_CSOUND_VST}.")
 if(BUILD_CSOUND_VST)
-    include_directories(${CMAKE_HOME_DIRECTORY}/interfaces)
-    include_directories(${CMAKE_HOME_DIRECTORY}/frontends/CsoundVST)
+    include_directories(SYSTEM ${CSOUND_INCLUDE_PATH})
+    # Dealing with `#include "float-version.h:`.
+    include_directories(SYSTEM ${CMAKE_CURRENT_SOURCE_DIR})
     include_directories(${EIGEN3_INCLUDE_PATH})
     include_directories(${VSTSDK2X_INCLUDE_DIR})
     include_directories(${VSTSDK2X_INCLUDE_DIR}/public.sdk/source/vst2.x)
@@ -29,9 +31,8 @@ if(BUILD_CSOUND_VST)
         OUTPUT_NAME CsoundVST
         RUNTIME_OUTPUT_DIRECTORY ${BUILD_BIN_DIR}
         LIBRARY_OUTPUT_DIRECTORY ${BUILD_LIB_DIR}
-        ARCHIVE_OUTPUT_DIRECTORY ${BUILD_LIB_DIR}
-        )
-    target_link_libraries(CsoundVST PRIVATE libcsnd6 ${CSOUNDLIB} ${FLTK_LIBRARIES} ${LIBSNDFILE_LIBRARY})
+        ARCHIVE_OUTPUT_DIRECTORY ${BUILD_LIB_DIR})
+    target_link_libraries(CsoundVST PRIVATE libcsnd6 ${CSOUNDLIB} fltk ${LIBSNDFILE_LIBRARY})
 
     if(MUSICXML_LIBRARY)
         target_link_libraries(CsoundVST PRIVATE libcsnd6 ${CSOUNDLIB} ${FLTK_LIBRARIES} ${LIBSNDFILE_LIBRARY} ${MUSICXML_LIBRARY})
@@ -39,16 +40,15 @@ if(BUILD_CSOUND_VST)
 
     set(CSOUNDVST_MAIN_SRCS
         csoundvst_main.cpp
-        ${VSTSDK2X_DIR}/public.sdk/source/vst2.x/audioeffect.cpp
-        ${VSTSDK2X_DIR}/public.sdk/source/vst2.x/audioeffectx.cpp)
+        ${VSTSDK2X_INCLUDE_DIR}/public.sdk/source/vst2.x/audioeffect.cpp
+        ${VSTSDK2X_INCLUDE_DIR}/public.sdk/source/vst2.x/audioeffectx.cpp)
     add_executable(csoundvstmain ${CSOUNDVST_MAIN_SRCS})
     set_target_properties(csoundvstmain PROPERTIES
         OUTPUT_NAME csoundvstmain
         RUNTIME_OUTPUT_DIRECTORY ${BUILD_BIN_DIR}
         LIBRARY_OUTPUT_DIRECTORY ${BUILD_LIB_DIR}
-        ARCHIVE_OUTPUT_DIRECTORY ${BUILD_LIB_DIR}
-        )
-    target_link_libraries(csoundvstmain PRIVATE CsoundVST libcsnd6 ${CSOUNDLIB} ${FLTK_LIBRARIES} ${LIBSNDFILE_LIBRARY})
+        ARCHIVE_OUTPUT_DIRECTORY ${BUILD_LIB_DIR})
+    target_link_libraries(csoundvstmain PRIVATE CsoundVST libcsnd6 ${CSOUNDLIB} fltk ${LIBSNDFILE_LIBRARY})
 
     if(MUSICXML_LIBRARY)
         target_link_libraries(csoundvstmain PRIVATE CsoundVST libcsnd6 ${CSOUNDLIB} ${FLTK_LIBRARIES} ${LIBSNDFILE_LIBRARY} ${MUSICXML_LIBRARY})
@@ -60,7 +60,9 @@ if(BUILD_CSOUND_VST)
         ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR})
 
     install(TARGETS csoundvstmain
-        RUNTIME DESTINATION "${EXECUTABLE_INSTALL_DIR}")
+        RUNTIME DESTINATION ${EXECUTABLE_INSTALL_DIR}
+        LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR}
+        ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR})
 
 endif()
 
