--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,21 @@
 [submodule "dependencies/liblo"]
 	path = dependencies/liblo
 	url = https://github.com/radarsat1/liblo.git
+[submodule "CsoundForAndroid/dependencies/libsndfile-android"]
+	path = CsoundForAndroid/dependencies/libsndfile-android
+	url = http://bitbucket.org/kunstmusik/libsndfile-android.git
+[submodule "CsoundForAndroid/dependencies/oboe"]
+	path = CsoundForAndroid/dependencies/oboe
+	url = https://github.com/google/oboe.git
+[submodule "CsoundForAndroid/dependencies/fluidsynth-android"]
+	path = CsoundForAndroid/dependencies/fluidsynth-android
+	url = http://bitbucket.org/kunstmusik/fluidsynth-android.git
+[submodule "CsoundForAndroid/dependencies/luajit-2.0"]
+	path = CsoundForAndroid/dependencies/luajit-2.0
+	url = http://luajit.org/git/luajit-2.0.git
+[submodule "CsoundForAndroid/dependencies/stk"]
+	path = CsoundForAndroid/dependencies/stk
+	url = http://github.com/thestk/stk.git
+[submodule "CsoundForAndroid/dependencies/liblo-android"]
+	path = CsoundForAndroid/dependencies/liblo-android
+	url = https://bitbucket.org/michael_gogins/liblo-android
