--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "CsoundForAndroid/ndk-libraries/link"]
 	path = CsoundForAndroid/ndk-libraries/link
 	url = https://github.com/Ableton/link.git
+[submodule "CsoundForAndroid/ndk-libraries/fluidsynth-android"]
+	path = CsoundForAndroid/ndk-libraries/fluidsynth-android
+	url = http://bitbucket.org/kunstmusik/fluidsynth-android.git
