--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/build.gradle
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "com.csounds.Csound6"
         minSdkVersion 21
         targetSdkVersion 21
-        versionCode 6
-        versionName '6.10.0beta'
+        versionCode 9
+        versionName '6.10.0'
     }
     buildTypes {
         release {
@@ -27,7 +27,6 @@ android {
         }
         debug {
             minifyEnabled false
-//            signingConfig signingConfigs.CsoundForAndroid
             debuggable true
         }
     }
