Refactoring Csound for Android app -- minor changes (#8).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,9 @@ if(USE_LIB64)
 else()
     set(LIBRARY_INSTALL_DIR "lib")
 endif()
-message(STATUS "LIBRARY_INSTALL_DIR: {LIBRARY_INSTALL_DIR}")
+message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
+message(STATUS "CPACK_PACKAGING_INSTALL_PREFIX: ${CPACK_PACKAGING_INSTALL_PREFIX}")
+message(STATUS "LIBRARY_INSTALL_DIR: ${LIBRARY_INSTALL_DIR}")
 message(STATUS "BUILD_BIN_DIR: ${BUILD_BIN_DIR}")
 message(STATUS "BUILD_LIB_DIR: ${BUILD_LIB_DIR}")
 message(STATUS "BUILD_PLUGINS_DIR: ${BUILD_PLUGINS_DIR}.")
@@ -65,7 +67,6 @@ message(STATUS "LIBRARY INSTALL DIR: ${LIBRARY_INSTALL_DIR}")
 message(STATUS "PLUGIN_INSTALL_DIR: ${PLUGIN_INSTALL_DIR}")
 option(USE_LRINT "Use lrint/lrintf for converting floating point values to integers." ON)
 option(USE_CURL "Use CURL library" ON)
-
 
 # Required targets.
 
