--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,9 +50,7 @@ else()
     set(LIBRARY_INSTALL_DIR "lib")
 endif()
 message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
-set(CPACK_PACKAGING_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
 message(STATUS "CPACK_PACKAGING_INSTALL_PREFIX: ${CPACK_PACKAGING_INSTALL_PREFIX}")
-message(STATUS "LIBRARY_INSTALL_DIR: ${LIBRARY_INSTALL_DIR}")
 message(STATUS "BUILD_BIN_DIR: ${BUILD_BIN_DIR}")
 message(STATUS "BUILD_LIB_DIR: ${BUILD_LIB_DIR}")
 message(STATUS "BUILD_PLUGINS_DIR: ${BUILD_PLUGINS_DIR}.")
@@ -135,15 +133,16 @@ add_subdirectory(CsoundVst)
 # These are the real targets: the packages.
 
 set(CPACK_GENERATOR TGZ; DEB)
-set(CPACK_DEBIAN_PACKAGE_MAINTAINER "csound-devel@listserv.heanet.ie")
-set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "csound-extended is a release of Csound, the sound and music processing language, extended with CsoundAC, CsoundHtml5, CsoundVST, and others.")
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Csound Developers")
+set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Csound, the sound and music processing language, plus CsoundVST, CsoundHtml5, and CsoundAC.")
 set(CPACK_PACKAGE_NAME "csound-extended")
 set(CPACK_PACKAGE_CONTACT "csound-devel@listserv.heanet.ie")
-set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
 set(CPACK_PACKAGE_VERSION "6.11.0-beta")
 set(CPACK_PACKAGE_VERSION_MAJOR "6")
 set(CPACK_PACKAGE_VERSION_MINOR "11")
 set(CPACK_PACKAGE_VERSION_PATCH "0")
+set(CPACK_STRIP_FILES "YES")
+set(CPACK_DEBIAN_PACKAGE_COPYRIGHT "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "")
 set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://github.com/gogins/csound-extended")
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS "ON")
