Added automatically running lintian (#9).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,9 +38,6 @@ set(BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})
 set(BUILD_PLUGINS_DIR ${BUILD_DIR})
 set(BUILD_BIN_DIR ${BUILD_DIR})
 set(BUILD_LIB_DIR ${BUILD_DIR})
-#if(APPLE AND NOT ${CMAKE_GENERATOR} STREQUAL "Xcode")
-#    set(BUILD_PLUGINS_DIR ${BUILD_DIR}/${CSOUNDLIB}.framework/Versions/${APIVERSION}/Resources/Opcodes)
-#endif()
 set(EXECUTABLE_INSTALL_DIR "bin")
 option(USE_LIB64 "Set to on to set installation directory for libraries to lib64" OFF)
 if(USE_LIB64)
@@ -50,6 +47,7 @@ else()
     set(LIBRARY_INSTALL_DIR "lib")
 endif()
 message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
+set(CPACK_PACKAGING_INSTALL_PREFIX "/usr/local")
 message(STATUS "CPACK_PACKAGING_INSTALL_PREFIX: ${CPACK_PACKAGING_INSTALL_PREFIX}")
 message(STATUS "BUILD_BIN_DIR: ${BUILD_BIN_DIR}")
 message(STATUS "BUILD_LIB_DIR: ${BUILD_LIB_DIR}")
