Build system for Linux.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,7 @@ find_package(PORTSMF)
 # find_package(portaudio2)
 find_package(PNG)
 find_package(PythonLibs 2.7)
-# find_package(Qt5 COMPONENTS Core Gui Widgets Network WebEngine WebEngineWidgets WebChannel REQUIRED)
+find_package(Qt5 COMPONENTS Core Gui Widgets Network WebEngine WebEngineWidgets WebChannel REQUIRED)
 find_package(Qt5 COMPONENTS Core Gui Widgets Network REQUIRED)
 find_package(STK)
 find_package(SWIG)
