Note on choosing Qt version.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,9 +17,13 @@ project(csound-extended)
 # Top-level CMake configuration.
 
 include(ExternalProject)
+
 set(CMAKE_CXX_STANDARD 11)
-# Make sure nothing breaks if upstream Csound updates APIVERSION.
-set(EXTENDED_CSOUND_APIVERSION "6.0")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wall")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
+
+# This is used for both Csound and CsoundAC SONAMEs.
+set(APIVERSION "6.0")
 set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/local-linux")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/dependencies/csound/cmake/Modules")
@@ -29,7 +33,8 @@ set(ALLOW_DUPLICATE_CUSTOM_TARGETS "Yes")
 add_definitions(-DUSE_DOUBLE)
 set(USE_DOUBLE "Yes")
 configure_file(${CMAKE_SOURCE_DIR}/dependencies/csound/include/float-version.h.in ${CMAKE_CURRENT_BINARY_DIR}/float-version.h)
-set(QMAKE "qmake")
+set(QT_INSTALL_PREFIX "~/Qt/5.10.0/gcc_64")
+set(QMAKE "/home/mkg/Qt/5.10.0/gcc_64/bin/qmake")
 set(CSOUND_INCLUDE_PATH "${CMAKE_SOURCE_DIR}/dependencies/csound/include")
 message(STATUS "CSOUND_INCLUDE_PATH: ${CSOUND_INCLUDE_PATH}")
 set(VSTSDK2X_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/dependencies/VST_SDK/VST2_SDK")
@@ -106,11 +111,11 @@ find_package(LLVM)
 set(LUA_H_PATH "${CMAKE_SOURCE_DIR}/dependencies/luajit-2.0/src")
 set(LUAJIT_LIBRARY "${CMAKE_SOURCE_DIR}/dependencies/luajit-2.0/src/libluajit.so")
 find_package(PORTSMF)
-# find_package(portaudio2)
+find_package(portaudio2)
 find_package(PNG)
 find_package(PythonLibs 2.7)
-find_package(Qt5 COMPONENTS Core Gui Widgets Network WebEngine WebEngineWidgets WebChannel REQUIRED)
-find_package(Qt5 COMPONENTS Core Gui Widgets Network REQUIRED)
+find_package(Qt5 COMPONENTS Core Widgets REQUIRED PATHS "~/Qt/5.10.0/gcc_64/lib/cmake/Qt5" CONFIGS "Qt5Config.cmake")
+find_package(Qt5 COMPONENTS Core Widgets REQUIRED HINTS "~/Qt/5.10.0")
 find_package(STK)
 find_package(SWIG)
 find_package(ZLIB)
@@ -134,7 +139,6 @@ install(FILES ${CMAKE_SOURCE_DIR}/copyright.txt
         RENAME copyright)
 
 set(CPACK_GENERATOR TGZ; DEB)
-set(CPACK_ADD_LDCONFIG_CALL "ON")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Michael Gogins <michael.gogins@gmail.com>")
 set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Extends Csound with CsoundVST, CsoundHtml5, and CsoundAC.")
 set(CPACK_PACKAGE_NAME "csound-extended")
@@ -143,11 +147,9 @@ set(CPACK_PACKAGE_VERSION "6.11.0-beta")
 set(CPACK_PACKAGE_VERSION_MAJOR "6")
 set(CPACK_PACKAGE_VERSION_MINOR "11")
 set(CPACK_PACKAGE_VERSION_PATCH "0")
-set(CPACK_STRIP_FILES "ON")
+set(CPACK_STRIP_FILES "YES")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "")
 set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://github.com/gogins/csound-extended")
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS "ON")
-set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS "ON")
-
 
 include (CPack)
