Remove incorrect Qt configuration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,8 +33,8 @@ set(ALLOW_DUPLICATE_CUSTOM_TARGETS "Yes")
 add_definitions(-DUSE_DOUBLE)
 set(USE_DOUBLE "Yes")
 configure_file(${CMAKE_SOURCE_DIR}/dependencies/csound/include/float-version.h.in ${CMAKE_CURRENT_BINARY_DIR}/float-version.h)
-set(QT_INSTALL_PREFIX "~/Qt/5.10.0/gcc_64")
-set(QMAKE "/home/mkg/Qt/5.10.0/gcc_64/bin/qmake")
+set(QT_INSTALL_PREFIX "/usr")
+set(QMAKE "qmake")
 set(CSOUND_INCLUDE_PATH "${CMAKE_SOURCE_DIR}/dependencies/csound/include")
 message(STATUS "CSOUND_INCLUDE_PATH: ${CSOUND_INCLUDE_PATH}")
 set(VSTSDK2X_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/dependencies/VST_SDK/VST2_SDK")
