Added external build for csound.node on Linux.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,15 @@ install(FILES "${CMAKE_SOURCE_DIR}/CsoundHtml5/CsoundHtml5"
     PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
     DESTINATION "${EXECUTABLE_INSTALL_DIR}")
 add_subdirectory(CsoundVst)
+ExternalProject_Add(CsoundNode
+    SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/csound.node"
+    BUILD_IN_SOURCE "1"
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND nw-gyp rebuild --target=0.28.0
+    INSTALL_COMMAND "")
+install(FILES "${CMAKE_SOURCE_DIR}/csound.node/build/Release/csound.node"
+    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
+    DESTINATION "${EXECUTABLE_INSTALL_DIR}")
 
 # These are the real targets: the packages.
 
